<resources>
    <string name="app_name">scrapvend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inventory</string>
    <string name="menu_pricing">Pricing</string>
    <string name="menu_pickupinfo">Pickups info</string>
    <string name="menu_pickupperson">Pickup Person</string>
    <string name="menu_contact">Contact info</string>
<!--    <string name="menu_send">Send</string>-->
</resources>
